IJI-773 Integrate JBR17 into IDEA trunk builds by default: module java.base does not open java.io, java.util.concurrent to unnamed module
GitOrigin-RevId: e5811ceca5dbee775182adb40178d0c4504c35de